@@ -1,1 +1,1 @@
-DIST schedule-v6.2.0.tar.gz 42622 SHA256 dcb6548ca92fe32ead12051d6d8491f301cb81d6e6795aabff020bcac94c9a82 SHA512 cbe9409deb1ff418e704df505673f6e4c88516edd85e65ec8872d31e730f92d6def3d7ee4f30857dcc3ca4095fdddebabfb1cd51d2df8b693794903f1e29f483 WHIRLPOOL 552b95d9cf66a04ce95a5621a7d6303d191396d5a34e6de57066b471d583dfe69e38425447184604a22446778842cae82a29ce4f74974ea42fd997be59e1778c
+DIST schedule-v6.2.1.tar.gz 43267 SHA256 06f472739e2d7e0835622236314809da411458949f58f94cd368524529240670 SHA512 e3c64b5020f06abea59e9160127c3a4ad6259f651bfb37667d0bd94c08351c2dfdaeaeb56344d15261ae3bc3294ffb73e42cbd02b9fca0976d1d14ffd335b153 WHIRLPOOL 014d720b28ffed5b4dfe7a48af6804da6c44dcb2dc15df9ffff2a29b1f92afdd9568eca1313ed4804561f6f683e9392cd2b24d027b84f59e6917491e742cb30f
