@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*systemd-cron-1.3.3 (23 Oct 2014)
+
+  23 Oct 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *systemd-cron-1.3.1 (22 Sep 2014)
 
   24 Sep 2014; Martin Väth <martin@mvath.de>:
