@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-6.2.1 (23 Oct 2014)
+
+  23 Oct 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *starter-6.2.0 (21 Oct 2014)
 
   21 Oct 2014; Martin Väth <martin@mvath.de>:
